2009-01-30  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpleplugin.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraymainwindowinterface.vala:
	*  ui/ui.xml:
	*  po/es.po:

	Improve menu and toolbar managment using UIManager.

2009-01-27  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:

	Changed TextView font to Monospace 10 by default.

2009-01-26  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  configure.ac:
	*  watray-1.0.pc.in:
	*  Makefile.am:

	Added watray-1.0.pc for pkg-config

2009-01-26  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watrayiteminfo.vala:
	*  watray/Makefile.am:

	Use ItemInfo instead of void* to hold the data of the item.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	
	Added empty_item method.
	Improved remove_item and remove_project methods using empty_item.
	
	*  watray/watraypluginmanagerview.vala:

	Use get_iter_from_string instead of a new TreePath.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayplugininterface.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watrayplugin.vala:

	Added configure support for plugins.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:

	Added remove_project to the projects panel.

2009-01-24  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  po/es.po:

	Updated spanish translation.

2009-01-24  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpleplugin.vala:
	
	Remove menu items when the plugin is deactivated.
	
	*  watray/watraypreferencemanager.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypreferencedialog.vala:

	Added plugins activated list support using gconf.
