@@ -1,3 +1,11 @@
+2009-02-01  Matias De la Puente  <mfpuente.ar@gmail.com>
+
+	*  watray/watrayproject.vala:
+	*  watray/watrayprojectspanel.vala:
+	*  watray/Makefile.am:
+
+	Use Value instead of ItemInfo to hold the data of the item.
+
 2009-01-30  Matias De la Puente  <mfpuente.ar@gmail.com>
 
 	*  watraysimple/simpleplugin.vala:
